# nzgmdb

./: .isort.cfg  Jenkinsfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deptry.yml  git-extension.yml  isort.yml  numpydoc.yml  pytest.yml  wiki.yml
Catalogue/: find_clipped_data.py  relocated_to_qcore.py  sta_site_merge_2.py
EQ/: calc_distance_gmdb.py  mseed_write_rrup.py  src_site_dist.py  tectclass_domain.py
IM/: gm_im_merge.py  gmc_filter.py  im_runner.sh
TectonicDomains/: TectonicDomains_Feb2021_8_NZTM.shp.xml
archive/Catalogue/: find_clipped_data.py  merge_all.py  sta_site_merge_2.py  station_basins.py
archive/EQ/: AfshariStewart_2016_Ds.py  geonet_to_gmdb.py  mag_scaling.py  mseed_write_rrup.py  src_site_dist.py  tectclass_domain.py
archive/IM/: gm_im_merge.py  gmc_filter.py
archive/TectonicDomains/: TectonicDomains_Feb2021_8_NZTM.dbf  TectonicDomains_Feb2021_8_NZTM.sbn
archive/pre-process/: butterworth.py  filter_design.py  geoNet_file.py  process.py  process_observed_hutchinson.py
nzgmdb/CCLD/: ccldpy.py
nzgmdb/Catalogue/: merge_all.py  relocated_to_qcore.py  station_basins.py
nzgmdb/EQ/: AfshariStewart_2016_Ds.py  calc_distance_gmdb.py  (+3 more)
phase_arrival/: gen_phase_arrival_table.py  picker.py
scripts/: run_nzgmdb.py
tests/: test_aftershocks.py
wiki/: Add-Tectonic-domain.md  Calculate-Distances.md  Calculate-Fmax.md  Calculate-SNR.md  Fetching-site-table.md  GMC.md  Home.md  IM-Calculation.md  Merge-Flatfiles.md  Merge-IM-Results.md  Parse-Geonet.md  Phase-Arrival.md  Process-Records.md  Upload-Dropbox.md
(+55 files in other folders)
