[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "NZGMDB"
authors = [
    {name = "QuakeCoRE" },
]
description = "Package for executing the pipeline for the NZGMDB"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.deptry]
package_module_name_map = { pyyaml = "yaml" }
