[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "NZGMDB"
authors = [
    {name = "QuakeCoRE" },
]
description = "Package for executing the pipeline for the NZGMDB"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["qcore", "empirical", "IM_calculation", "Velocity_Model"]